# CPUGA-RayTracer

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
lib/garamon-c3ga/: CMakeLists.txt
lib/garamon-c3ga/src/c3ga/: Mvec.hpp  c3gaTools.hpp
shaders/: displayTexture.frag
src/: App.cpp  App.h  main.cpp
src/Image/: Color.cpp  Color.h  Image.cpp  Image.h  ImageIterator.cpp  ImageIterator.h  Pixel.cpp  Pixel.h
